argocd/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.zion.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-svc
                port:
                  name: http
